[package]
name = "ethereum-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow="1.0"
jsonrpsee = { version = "0.9", features = ["full"] }
jsonrpc-core = "18.0.0"
jsonrpc-http-server = "18.0.0"
lazy_static = "1.2.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
tracing = "0.1.31"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
tokio = {version = "1.17.0", features = ["full", "tracing"]}
ethers="0.6.2"